--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-floatify",                    
-  "version": "0.1.6",                         
+  "version": "0.1.7",                         
   "private": false,                           
   "type": "module",                           
   "main": "dist/index.umd.js", 
@@ -12,7 +12,7 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "tsc -p tsconfig.build.json && vite build",
+    "build": "vite build && tsc -p tsconfig.build.json",
     "lint": "eslint .",
     "preview": "vite preview",
     "prepublishOnly": "npm run build"         
